# nftBuddy

./: .env.example  .gitignore  Cargo.toml  README.md
src/: cli.rs  display.rs  main.rs  model.rs  rpc.rs
src/jutsu/: dossier.rs  mod.rs  unmask.rs
