[package]
name = "shinobi"
version = "0.1.0"
edition = "2021"
description = "A CLI for Solana NFT intelligence and forensics."
license = "MIT"
repository = "https://github.com/AdityaP700/shinobi"
readme = "README.md"
keywords = ["solana", "nft", "cli", "web3", "blockchain"]
categories = [
    "command-line-utilities",
    "api-bindings",
    "cryptography::cryptocurrencies",
    "web-programming",
    "visualization"
]
[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.1"
thiserror = "1.0"
anyhow = "1.0"
solana-sdk = "~1.17"
mpl-token-metadata = "3.2"
base64 = "0.21"
borsh = "0.10"
viuer = "0.7"
image = "0.24"